# openuni-defensive-coding-project

src/client/: CMakeLists.txt  README.md  me.info
src/client/src/: main.cpp  protocol_message.cpp  protocol_message.hpp  protocol_server_response.cpp  protocol_server_response.hpp  tcp_client.cpp  tcp_client.hpp
src/client/src/controller/: client_controller.cpp  client_controller.hpp
src/client/src/cryptopp_wrapper/: AESWrapper.cpp  AESWrapper.h  RSAWrapper.cpp  RSAWrapper.h  main-inner.cpp
src/client/src/model/: client_model.cpp  client_model.hpp
src/client/src/view/: client_view.cpp  client_view.hpp
src/server/: protocol_constants.py  server.py  server_controller.py  server_model.py  server_view.py
src/tests/: test_integration.py
